--- a/birthday-master/firework.html
+++ b/birthday-master/firework.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>canvas 烟花</title>
+<title>祝易同学生日快乐</title>
 <style type="text/css">
 /* basic styles for black background and crosshair cursor */
 body { background: #000; margin: 0; }
