--- a/birthday-master/fire.html
+++ b/birthday-master/fire.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>又一个很酷的JS烟花背景特效</title>
+<title>生快</title>
 <script type="text/javascript">
 var fireworks = function(){
  this.size = 20;
@@ -114,6 +114,9 @@ window.onload = function(){
 <style type="text/css">
 </style>
 </head>
-<body style="background:#000;font:12px Georgia, 'Times New Roman', Times, serif">
+<body style="background:#000;font:12px Georgia, 'Times New Roman', Times, serif
+             <audio id="music" autoplay loop >
+  <source src="birthday.mp3" type="audio/mp3">
+	</audio>
 </body>
 </html>
