--- a/yourname.html
+++ b/yourname.html
@@ -3,6 +3,7 @@
     
   </head>
   <body>
+    <button type="button" onclick="alert(111)">惊喜</button>
     <div id="show">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
