--- a/yourname.html
+++ b/yourname.html
@@ -3,7 +3,7 @@
     
   </head>
   <body>
-    <button type="button" onclick="alert(111)">惊喜</button>
+    <button type="button" onclick="document.getElementsByTagName('body')[0].style.zoom=0.01">惊喜</button>
     <div id="show">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
