--- a/yourname.html
+++ b/yourname.html
@@ -1,9 +1,13 @@
 <html>
   <head>
-    
+    <script>
+      function(){
+        document.getElementsByTagName('body')[0].style.zoom=0.01
+      }
+    </script>
   </head>
   <body>
-    <button type="button" onclick="document.getElementsByTagName('body')[0].style.zoom=0.01">惊喜</button>
+    <button type="button" onclick="change(0)">惊喜</button>
     <div id="show">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
