--- a/yourname.html
+++ b/yourname.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <script>
-      function(){
+      function change(){
         document.getElementsByTagName('body')[0].style.zoom=0.01
       }
     </script>
   </head>
   <body>
-    <button type="button" onclick="change(0)">惊喜</button>
+    <button type="button" onclick="change()">惊喜</button>
     <div id="show">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
