--- a/yourname.html
+++ b/yourname.html
@@ -3,6 +3,7 @@
     <script>
       function change(){
         document.getElementsByTagName('body')[0].style.zoom=0.01
+        alert(123)
       }
     </script>
   </head>
