--- a/yourname.html
+++ b/yourname.html
@@ -2,8 +2,8 @@
   <head>
     <script>
       function change(){
-        document.getElementsByTagName('body')[0].style.zoom=0.01
-        alert(123)
+        document.getElementsByTagName('body')[0].style.zoom=0.1
+        alert("七夕节快乐")
       }
     </script>
   </head>
