--- a/yourname.html
+++ b/yourname.html
@@ -2,14 +2,15 @@
   <head>
     <script>
       function change(){
-        document.getElementsByTagName('body')[0].style.zoom=0.3
         alert("七夕节快乐")
+        document.getElementsByTagName('body')[0].style.zoom=0.3
+        document.getElementById("show").hidden=false
       }
     </script>
   </head>
   <body>
     <button type="button" onclick="change()">惊喜</button>
-    <div id="show">
+    <div id="show" hidden="true">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
 ``````````:```'1',:````````````:`:::::::````````,,,,""!''';,,,,`````````:::::::::::::::::::::::::::::::::::::::::;'~;;;,`:::``:::```:```````````````,,,,,,,,,,;,,,;;;;;;;;;;;'''''''';;';;';;';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;'';;;;;;
