--- a/yourname.html
+++ b/yourname.html
@@ -4,13 +4,13 @@
       function change(){
         alert("七夕节快乐")
         document.getElementsByTagName('body')[0].style.zoom=0.3
-        document.getElementById("show").hidden=false
+        document.getElementById("show").show()
       }
     </script>
   </head>
   <body>
     <button type="button" onclick="change()">惊喜</button>
-    <div id="show" hidden="true">
+    <div id="show" hidden="hidden">
       <pre>
 ```````````````'1;,````````````:::::````````````,,,;'""~''';,,,````````:::::::::::::::::::::::::::::::::::::::::`~'';;;`````:::::```:```````````````,,,,,,,,,,,,;;;;;;;;;;;;'''''''''';;;;';''';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;';;;;;;
 ``````````:```'1',:````````````:`:::::::````````,,,,""!''';,,,,`````````:::::::::::::::::::::::::::::::::::::::::;'~;;;,`:::``:::```:```````````````,,,,,,,,,,;,,,;;;;;;;;;;;'''''''';;';;';;';;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;'';;;;;;
