--- a/yourname.html
+++ b/yourname.html
@@ -4,7 +4,7 @@
       function change(){
         alert("七夕节快乐")
         document.getElementsByTagName('body')[0].style.zoom=0.3
-        document.getElementById("show").style.display=none
+        document.getElementById("show").style.visibility = 'visible'
       }
     </script>
   </head>
