--- a/birthday-master/index.html
+++ b/birthday-master/index.html
@@ -111,15 +111,15 @@
     <div id="images_show">
       <div class="show_image1">
         <div class="clamp"></div>
-        <div class="overimage"><div class="kobeimage"><img src="image/kobe1.jpg" width="150px" height="150px"/></div></div>
+        <div class="overimage"><div class="image"><img src="image/lyf1.jpg" width="150px" height="150px"/></div></div>
       </div>
       <div class="show_image2">
         <div class="clamp2"></div>
-        <div class="overimage2"><div class="kobeimage2"><img src="image/kobe2.jpg" width="150px" height="150px"/></div></div>
+        <div class="overimage2"><div class="image2"><img src="image/lyf2.jpg" width="150px" height="150px"/></div></div>
       </div>
       <div class="show_image3">
         <div class="clamp3"></div>
-        <div class="overimage3"><div class="kobeimage3"><img src="image/kobe3.jpg" width="150px" height="150px"/></div></div>
+        <div class="overimage3"><div class="image3"><img src="image/lyf3.jpg" width="150px" height="150px"/></div></div>
       </div>
     </div>
   
